--- a/1examenLabo4/src/app/componentes/home/home.component.html
+++ b/1examenLabo4/src/app/componentes/home/home.component.html
@@ -13,6 +13,9 @@
       <div>
         <button routerLink="/producto" class="btn btn-primary">productos</button>
       </div>
+      <div>
+        <button routerLink="/producpais" class="btn btn-primary">verForm</button>
+      </div>
       <h1>Perfil de GitHub</h1>
       <div *ngIf="user" class="mt-4">
         <h2>{{ user.name }}</h2>
