--- a/1examenLabo4/src/app/componentes/productpais/productpais.component.html
+++ b/1examenLabo4/src/app/componentes/productpais/productpais.component.html
@@ -1,1 +1,15 @@
-<button routerLink="/listadoProductos" class="btn btn-primary">Ver Listado de Productos</button>
+<div class="jumbotron">
+    <h1>Custom jumbotron</h1>
+    <app-listado-producto (productoSeleccionado)="seleccionarProducto($event)"></app-listado-producto>
+  </div>
+  
+  <div class="background">
+    
+    <app-detalle-producto *ngIf="productoSeleccionado" [producto]="productoSeleccionado"></app-detalle-producto>
+  </div>
+  
+  <div class="borders">
+   
+    <app-detalle-pais *ngIf="productoSeleccionado && productoSeleccionado.paisOrigen" [pais]="getPaisOrigen()"></app-detalle-pais>
+  </div>
+  
