--- a/1examenLabo4/src/app/componentes/detalle-pais/detalle-pais.component.html
+++ b/1examenLabo4/src/app/componentes/detalle-pais/detalle-pais.component.html
@@ -2,6 +2,7 @@
     <h2>Detalle del País</h2>
     <p><strong>Nombre:</strong> {{ pais.nombre }}</p>
     <p><strong>Código:</strong> {{ pais.codigo }}</p>
-    <img [src]="pais.banderaUrl" alt="Bandera de {{ pais.nombre }}">
+    <img [src]="pais.banderaUrl" alt="{{ pais.nombre }}" />
+    <p><strong>Continente:</strong> {{ pais.continente }}</p>
   </div>
   
