--- a/1examenLabo4/src/app/componentes/seleccionpais/seleccionpais.component.html
+++ b/1examenLabo4/src/app/componentes/seleccionpais/seleccionpais.component.html
@@ -1,10 +1,12 @@
-<div>
-  <h3>Seleccionar País</h3>
-  <ul class="list-group">
-    <li *ngFor="let pais of paises" class="list-group-item" (click)="seleccionarPais(pais)">
-      <img [src]="pais.banderaUrl" alt="{{ pais.nombre }} bandera" style="width: 20px; height: 20px; margin-right: 10px;">
-      {{ pais.nombre }}
-     
+<div *ngIf="paises.length > 0">
+  <h2>Selecciona un país:</h2>
+  <ul>
+    <li *ngFor="let pais of paises" (click)="seleccionarPais(pais)">
+      <img [src]="pais.banderaUrl" alt="{{ pais.nombre }}">
+      <span>{{ pais.nombre }}</span>
     </li>
   </ul>
+</div>
+<div *ngIf="paises.length === 0">
+  <p>Cargando países...</p>
 </div>
