--- a/1examenLabo4/src/app/componentes/registro/registro.component.css
+++ b/1examenLabo4/src/app/componentes/registro/registro.component.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-image: url("../../../assets/environments/imagenes/Fondopc2.jpg");
+    /* background-image: url("../../../assets/environments/imagenes/Fondopc2.jpg"); */
     background-color: #cccccc;
   }
   
