--- a/1examenLabo4/src/app/componentes/seleccionpais/seleccionpais.component.html
+++ b/1examenLabo4/src/app/componentes/seleccionpais/seleccionpais.component.html
@@ -1,12 +1,16 @@
-<div *ngIf="paises && paises.length > 0">
-  <h2>Selecciona un país:</h2>
-  <ul>
-    <li *ngFor="let pais of paises" (click)="seleccionarPais(pais)">
-      <img [src]="pais.banderaUrl" alt="{{ pais.nombre }}">
-      <span>{{ pais.nombre }}</span>
-    </li>
-  </ul>
-</div>
-<div *ngIf="!paises || paises.length === 0">
-  <p>Cargando países...</p>
+<div class="pais-selector">
+  <div *ngIf="paises && paises.length > 0">
+    <h2>Selecciona un país:</h2>
+    <div class="pais-list">
+      <ul>
+        <li *ngFor="let pais of paises" (click)="seleccionarPais(pais)">
+          <img [src]="pais.banderaUrl" alt="{{ pais.nombre }}">
+          <span>{{ pais.nombre }}</span>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div *ngIf="!paises || paises.length === 0">
+    <p>Cargando países...</p>
+  </div>
 </div>
