--- a/1examenLabo4/src/app/componentes/home-admin/home-admin.component.html
+++ b/1examenLabo4/src/app/componentes/home-admin/home-admin.component.html
@@ -1,4 +1,7 @@
 <div class="home-container">
+  <div>
+    <button routerLink="/home" class="btn btn-primary">Volver</button>
+  </div>
     <div class="header">
       <h1>Administración de Usuarios</h1>
       <button (click)="cerrarSesion()" class="btn-logout">Cerrar sesión</button>
