--- a/1examenLabo4/src/app/componentes/home-contenedores/home-contenedores.component.html
+++ b/1examenLabo4/src/app/componentes/home-contenedores/home-contenedores.component.html
@@ -1,4 +1,7 @@
 <div class="container mt-4">
+  <div>
+    <button routerLink="/home" class="btn btn-primary">Volver</button>
+  </div>
   <h1 class="text-center my-4">Gestión de Contenedores</h1>
   <div class="button-group text-center my-4">
     <button class="btn btn-primary mx-2" (click)="selectAction('listar')">Listar Contenedores</button>
