--- a/1examenLabo4/src/app/componentes/producto/producto.component.html
+++ b/1examenLabo4/src/app/componentes/producto/producto.component.html
@@ -1,3 +1,6 @@
+<div>
+  <button routerLink="/home" class="btn btn-primary">Volver</button>
+</div>
 <form [formGroup]="productoForm" (ngSubmit)="onSubmit()">
   <div class="mb-3">
     <label for="codigo" class="form-label">Código:</label>
