--- a/1examenLabo4/src/app/componentes/home-contenedores/home-contenedores.component.css
+++ b/1examenLabo4/src/app/componentes/home-contenedores/home-contenedores.component.css
@@ -99,3 +99,20 @@
 .mb-3 {
   margin-bottom: 1rem;
 }
+
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f0f2f5;
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  text-align: center;
+  color: #333;
+  margin-top: 20px;
+}
+
+button {
+  font-size: 14px;
+}
