--- a/1examenLabo4/src/app/componentes/listar-containers/listar-containers.component.html
+++ b/1examenLabo4/src/app/componentes/listar-containers/listar-containers.component.html
@@ -1,9 +1,19 @@
-
-<div class="container">
-  <h2>Listado de Contenedores</h2>
-  <ul class="list-group">
-    <li *ngFor="let container of containers" class="list-group-item" (click)="selectContainer(container)">
-  {{ container.descripcion }} - {{container.empresa}} - {{ container.codigo }} - {{container.capacidad}} - {{container.color}}
+<div class="container-list">
+  <h2>Lista de Contenedores</h2>
+  <input type="text" placeholder="Buscar..." [(ngModel)]="searchText" class="search-box">
+  <ul class="container-list__items">
+    <li *ngFor="let container of containers | buscar:searchText" (click)="selectContainer(container)" [class.selected]="container === selectedContainer">
+      <div class="container-details">
+        <span><strong>Código:</strong> {{ container.codigo }}</span>
+        <span><strong>Color:</strong> {{ container.color }}</span>
+        <span><strong>Empresa:</strong> {{ container.empresa }}</span>
+        <span><strong>Capacidad:</strong> {{ container.capacidad }} unidades</span>
+        <span><strong>Descripción:</strong> {{ container.descripcion }}</span>
+      </div>
+      <div *ngIf="container === selectedContainer" class="container-actions">
+        <button (click)="onEdit(container, $event)">Editar</button>
+        <button (click)="onDelete(container.codigo, $event)">Borrar</button>
+      </div>
     </li>
   </ul>
 </div>
