--- a/1examenLabo4/src/app/componentes/listar-containers/listar-containers.component.html
+++ b/1examenLabo4/src/app/componentes/listar-containers/listar-containers.component.html
@@ -11,8 +11,9 @@
         <span><strong>Descripción:</strong> {{ container.descripcion }}</span>
       </div>
       <div *ngIf="container === selectedContainer" class="container-actions">
-        <button (click)="onEdit(container, $event)">Editar</button>
-        <button (click)="onDelete(container.codigo, $event)">Borrar</button>
+        <button *ngIf="!editMode && !deleteMode" (click)="onEdit()">Editar</button>
+        <button *ngIf="!editMode && !deleteMode" (click)="onDelete(container.codigo, $event)">Borrar</button>
+        <button *ngIf="editMode || deleteMode" (click)="cancelAction()">Cancelar</button>
       </div>
     </li>
   </ul>
