--- a/1examenLabo4/src/app/componentes/crear-container/crear-container.component.html
+++ b/1examenLabo4/src/app/componentes/crear-container/crear-container.component.html
@@ -1,5 +1,5 @@
 <div>
-  <h2>Crear Contenedor</h2>
+  <h2 class="titulo">Crear Contenedor</h2>
   <form (ngSubmit)="createContainer()">
     <label>Código: <input [(ngModel)]="codigo" name="codigo" required></label>
     <label>Color: <input [(ngModel)]="color" name="color" required></label>
