--- a/1examenLabo4/src/app/componentes/listar-containers/listar-containers.component.html
+++ b/1examenLabo4/src/app/componentes/listar-containers/listar-containers.component.html
@@ -1,4 +1,4 @@
-<div class="container-list">
+<div class="container-list fondoDepantalla">
   <h2>Lista de Contenedores</h2>
   <input type="text" placeholder="Buscar..." [(ngModel)]="searchText" class="search-box">
   <ul class="container-list__items">
