--- a/1examenLabo4/src/app/componentes/crear-container/crear-container.component.css
+++ b/1examenLabo4/src/app/componentes/crear-container/crear-container.component.css
@@ -14,6 +14,11 @@ form {
   background-color: #f9f9f9;
 }
 
+ span {
+  display: block;
+  margin-top: 1rem;
+  color: #a40808;
+ }
  
 label {
   display: flex;
