--- a/1examenLabo4/src/app/componentes/home-contenedores/home-contenedores.component.css
+++ b/1examenLabo4/src/app/componentes/home-contenedores/home-contenedores.component.css
@@ -116,3 +116,15 @@ h1 {
 button {
   font-size: 14px;
 }
+.botonVolver{
+  background-color: #007bff;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 5px;
+}
