--- a/1examenLabo4/src/app/componentes/home/home.component.html
+++ b/1examenLabo4/src/app/componentes/home/home.component.html
@@ -1,9 +1,8 @@
 <div class="home-container"> 
   <div>
-   
     <div class="container">
       <div class="header">
-        <h1>Bienvenido {{nombreUsuario}}, a los productos</h1>
+        <h1>Bienvenido {{nombreUsuario}} <h3>Productos UTN</h3></h1>
         <button (click)="cerrarSesion()" class="btn btn-logout" style="margin-top: -1rem;">Cerrar sesión</button>
       </div>
       <div>
