--- a/1examenLabo4/src/app/componentes/listado-producto/listado-producto.component.html
+++ b/1examenLabo4/src/app/componentes/listado-producto/listado-producto.component.html
@@ -1,5 +1,5 @@
 <div>
-  <button routerLink="/home" class="btn btn-primary">Volver</button>
+  <button routerLink="/home" class="btn btn-primary botonVolver">Volver</button>
 </div>
 <div class="container my-5">
   <div class="row">
