--- a/1examenLabo4/src/app/componentes/producto/producto.component.html
+++ b/1examenLabo4/src/app/componentes/producto/producto.component.html
@@ -1,5 +1,5 @@
 <div>
-  <button routerLink="/home" class="btn btn-primary">Volver</button>
+  <button routerLink="/home" class="btn btn-primary botonVolver">Volver</button>
 </div>
 <form [formGroup]="productoForm" (ngSubmit)="onSubmit()">
   <div class="mb-3">
