--- a/1examenLabo4/src/app/componentes/home/home.component.css
+++ b/1examenLabo4/src/app/componentes/home/home.component.css
@@ -12,14 +12,14 @@
     background-position: center;
   }
   .container {
-    background-color: rgba(255, 254, 254, 0.446); /* Más opacidad para resaltar el texto */
+    background-color: rgba(255, 254, 254, 0.446); 
     padding: 40px;
     border-radius: 15px;
   }
   
   .header {
     display: flex;
-    justify-content: space-between; /* Alinea el título y el botón de cierre de sesión */
+    justify-content: space-between; 
     align-items: center;
   }
   .home-content {
