--- a/1examenLabo4/src/app/componentes/listado-producto/listado-producto.component.css
+++ b/1examenLabo4/src/app/componentes/listado-producto/listado-producto.component.css
@@ -84,3 +84,16 @@
     transform: translateX(-50%);
     font-size: 24px;
   }
+
+  .botonVolver{
+    background-color: #007bff;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 5px;
+  }
