--- a/1examenLabo4/src/app/componentes/producto/producto.component.css
+++ b/1examenLabo4/src/app/componentes/producto/producto.component.css
@@ -54,3 +54,15 @@ form {
   max-height: 300px;
   overflow-y: auto;
 }
+.botonVolver{
+  background-color: #007bff;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 5px;
+}
