--- a/1examenLabo4/src/app/componentes/eliminarcontenedor/eliminarcontenedor.component.css
+++ b/1examenLabo4/src/app/componentes/eliminarcontenedor/eliminarcontenedor.component.css
@@ -2,38 +2,42 @@
   background-image: url("../../../assets/environments/imagenes/container1.jpg");
  
 }
-.container {
-  margin-top: 20px;
+.delete-container {
+  background-color: #f8f9fa;
+  border: 1px solid #ced4da;
+  padding: 20px;
+  margin: auto;  
+  width: 60%;  
+  max-width: 400px;  
+  text-align: center;  
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgb(237, 232, 232);
 }
 
-.list-group-item {
+.delete-container h2 {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+  color:#f8f9fa ;
+}
+
+.delete-container p {
+  margin-bottom: 15px;
+  background-color: rgb(16, 9, 0);
+  border-radius: 60px;
+  color:#f8f9fa ;
+
+}
+
+.delete-button {
+  background-color: #dc3545;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 4px;
   cursor: pointer;
-  transition: background-color 0.3s ease;  
+  transition: background-color 0.3s ease;
 }
 
-.list-group-item:hover {
-  background-color: #92021da8;  
-}
-
-.list-group-item.active {
-  background-color: #aa4040;  
-}
-
-.text-center {
-  margin-top: 20px;
-}
-
-.btn-danger {
-  margin-top: 10px;
-  background-color: #dc3545;  
-  border-color: #dc3545;  
-}
-
-.btn-danger:hover {
-  background-color: #c82333; 
-  border-color: #c82333;  
-}
-
-.btn-danger:focus {
-  box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.5); /* Sombra al enfocar el botón */
+.delete-button:hover {
+  background-color: #c82333;
 }
