--- a/1examenLabo4/src/app/componentes/eliminarcontenedor/eliminarcontenedor.component.html
+++ b/1examenLabo4/src/app/componentes/eliminarcontenedor/eliminarcontenedor.component.html
@@ -1,4 +1,5 @@
-<div>
-  <h2>Borrar Contenedor</h2>
-  <button (click)="deleteContainer()">Borrar</button>
+<div class="delete-container fondoDepantalla">
+  <h2>Eliminar Contenedor</h2>
+  <p>¿Estás seguro de que deseas eliminar este contenedor?</p>
+  <button (click)="deleteContainer()" class="delete-button">Confirmar Eliminación</button>
 </div>
